# ToTreeOrNotToTree

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
data/input/: crimeandpunishment.txt  thesunalsorises.txt
data/output/: report.html  report.txt
include/: FileHandle.cpp  FileHandle.h  Tree.h  WordNet.h  ctml.h
lib/: index.html  template.html
misc/: project_reqs.doc
server/: deploy.sh  dev.sh  fly.toml
server/app/: app.py
src/: Cleanup.cpp  WordNet.cpp  main.cpp  test.cpp
